<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".UI_Components.Activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/peplogo"
                android:layout_width="191dp"
                android:layout_height="155dp"
                android:layout_gravity="center"
                android:src="@mipmap/impexlogo"
                android:padding="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Impex Tutor"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:paddingBottom="15dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingBottom="20dp"
                    />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or Sign in with"
                android:layout_gravity="center"
                android:padding="10dp"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawablePadding="10dp"
        android:layout_gravity="center"
        android:text="Facebook"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:id="@+id/facebookbutton"
        android:drawableLeft="@drawable/facebooktest"
        android:layout_marginRight="15dp"
        android:background="?android:attr/selectableItemBackground"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/googecustombuton"
        android:drawablePadding="5dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="Google"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/impexgoogle"
        android:background="?android:attr/selectableItemBackground"/>

</LinearLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/loginbuttonbackground"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/new_user"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/startRegister"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:background="?attr/selectableItemBackground"
                    android:textColor="@color/blue"
                    android:text="@string/sign_up_start"/>

            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>